Fix line-through Fix line-through after drag and drop Add Generate button to create 6 task

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="header">
         <a href="javascript:addTask()" id="btn"><span>Добавить задачу</span></a>
         <input type="text" id="taskName" size="100" minlength="5" maxlength="100" placeholder="Название задачи">
+        <a href="javascript:genTasks()" id="btn-2"><span>Сгенерировать</span></a>
     </div>
     <div class="task-list">
 
